@@ -1,4 +1,5 @@
 ======================
+    ADDED: Starting Krusader with root privileges by pressing Alt+K
     FIXED: Terminal Emulator bug at ` and Backspace keys
     ADDED: Open-in-a-new-tab available in right-click menu
     ADDED: Creating new files with SHIFT+F4
